--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 body{
-    background-color: #001e4d;
+    background-color: #769edd;
 }
 .app{
     background-color: #fff;
